--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,210 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
+      autocomplete="off"
+      onsubmit="onSubmit()"
+    >
+      <fieldset class="form-section">
+        <legend>Personal information</legend>
+
+        <div class="form-element">
+          <label for="surname">
+            Surname:
+          </label>
+          <input
+            type="text"
+            name="Surname"
+            id="surname"
+            required
+          >
+        </div>
+
+        <div class="form-element">
+          <label for="name">
+            Name:
+          </label>
+          <input
+            type="text"
+            name="Name"
+            id="name"
+            required
+          >
+        </div>
+
+        <div class="form-element">
+          <label for="age">
+            How old are You?
+          </label>
+          <input
+            type="number"
+            name="Age"
+            id="age"
+            value="12"
+            min="12"
+            max="100"
+          >
+        </div>
+
+        <div class="form-element">
+          <label for="birth">
+            Full date of birth:
+          </label>
+          <input
+            type="date"
+            name="Date of birth"
+            id="birth"
+          >
+        </div>
+
+        <div>
+          <label for="agreement">
+            I accept the term of the agreement
+          </label>
+          <input
+            type="checkbox"
+            name="Agreement"
+            id="agreement"
+            required
+          >
+        </div>
+      </fieldset>
+
+      <fieldset class="form-section">
+        <legend>Registration</legend>
+
+        <div class="form-element">
+          <label for="e-mail">
+            E-mail:
+          </label>
+          <input
+            type="email"
+            name="E-mail"
+            id="e-mail"
+            placeholder="email@example.com"
+            required
+          >
+        </div>
+
+        <div>
+          <label for="password">
+            Password
+          </label>
+          <input
+            type="password"
+            name="Password"
+            id="password"
+            required
+            minlength="8"
+            maxlength="32"
+          >
+        </div>
+      </fieldset>
+
+      <fieldset class="form-section">
+        <legend>An interesting fact about you!</legend>
+
+        <div class="form-element">
+          Do you love cats?
+          <label for="yes">
+            <input
+              type="radio"
+              name="Love cats"
+              id="yes"
+            >
+            Yes
+          </label>
+          <label for="no">
+            <input
+              type="radio"
+              name="Love cats"
+              id="no"
+            >
+            No
+          </label>
+        </div>
+
+        <div class="form-element">
+          <label for="color">
+            What is your favorite color?
+          </label>
+          <input
+            type="color"
+            name="Favorite color"
+            id="color"
+          >
+        </div>
+
+        <div class="form-element">
+          <label for="sleep-time">
+            What time do you go to bed?
+          </label>
+          <input
+            type="time"
+            name="Usuale sleep time"
+            id="sleep-time"
+          >
+        </div>
+
+        <div class="form-element">
+          <label for="brand-of-cars">
+            What are you favorite brand of cars?
+          </label>
+          <select
+            name="brand-of-cars"
+            id="brand-of-cars"
+            multiple
+          >
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+            <option value=""></option>
+          </select>
+        </div>
+
+        <div>
+          <label for="evaluation">
+            How do you rate our work?
+          </label>
+          <input
+            type="range"
+            name="Evaluation of our work"
+            id="evaluation"
+          >
+        </div>
+      </fieldset>
+
+      <fieldset class="form-section">
+        <legend>Additional info</legend>
+
+        <div class="form-element">
+          <label for="comments">
+            Comments:
+          </label>
+          <textarea
+            name="Comments"
+            id="comments"
+            rows="2"
+          >
+          </textarea>
+        </div>
+
+        <div>
+          <label for="recommend-us">
+            Would you like recommend us?
+          </label>
+          <select name="Will reccomend us" id="recommend-us">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+          </select>
+        </div>
+      </fieldset>
+      <button type="submit">
+        Submit
+      </button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
